--- a/Resources.html
+++ b/Resources.html
@@ -137,7 +137,7 @@
                     Life Science
                 </button>
 
-                <div id="life-science-items" class="resource-items">
+                <div id="life-science-items" class="resource-items" style="display: none;" >
                     <div class="resource-item" data-bg="url('image7.jpg')">
                         <a href="https://pubmed.ncbi.nlm.nih.gov/">
                             <h3>
@@ -191,7 +191,7 @@
                     More
                 </button>
 
-                <div id="more-science-items" class="resource-items">
+                <div id="more-science-items" class="resource-items" style="display: none;" >
                     <div class="resource-item" data-bg="url('image11.jpg')">
                         <a href="https://www.duolingo.com/">
                             <h3>
