--- a/Resources.html
+++ b/Resources.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToolAlchemy</title>
-    <link rel="icon" href="assets/img/logo6.jpg" type="image/jpg/png">
+    <link rel="icon" href="assets/img/logo7-.pngg" type="image/jpg/png">
     <meta name="description"
         content="ToolAlchemy is a website that provides essential resources and tools to support your academic journey.">
     <link rel="stylesheet" href="styels.css">
